--- a/contacts.html
+++ b/contacts.html
@@ -9,10 +9,8 @@
 
 </head>
 <body   background="1.jpg">
-   <p>For further in formation u may call any of the following numbers </p>
-<p>08033149395 </p>
-<p>08033404076 </p> 
-<p> 07061363634 </p>
+   <p>Im not giving u my number </p>
+
    
 
 <a href="aboutme.html">About me</a></br>
